--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<html>
-  <head>
-    <title>Milo Dev Blog</title>
-  </head>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Milo Dev Blog</title>
+  <link rel="stylesheet" href="./styles/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+</head>
+<body>
+  <h1>Kia ora Taiao! (Hello World!)</h1> 
     <p> This is the beginning of my website home page.</p>
     <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+</body>
 </html>
