add html and css to blog

--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
   <title>Milo Dev Blog</title>
   <link rel="stylesheet" href="./styles/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abel&family=Oswald:wght@400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+  <header class="yellow" id="landing-page">
+    <nav>
+      <h1>Blog.</h1>
+      <div>
+        <a href="#landing-page"><button>Landing Page</button></a>
+        <a href="#blog-posts"><button class="nav-btn">Blog Posts</button></a>
+        <a href="#goals"><button>Goals</button></a>
+      </div>
+    </nav>
+  </header>
+  <section class="yellow">
+    <div class="container grid">
+      <div class="hero-text-wrapper">
+        <h2>Kia ora Taiao! HelloWorld!</h2> 
+        <p> This is the beginning of my website home page. It will eventually contain a list of links to all my blogs. </p>
+      </div>
+      <img src="./assets/Img-1.png"/>
+  </div>
+  </section>
+  <section id="goals">
+    
+  </section>
+  <section id="blog-posts">
+
+  </section>
 </body>
 </html>
