--- a/stylesheet.html
+++ b/stylesheet.html
@@ -4,29 +4,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Milo Dev Blog</title>
+  <title>Stylesheet for Blog</title>
   <link rel="stylesheet" href="./styles/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Abel&family=Oswald:wght@400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Heading</h1> 
-  <h2>Heading</h2> 
-  <h3>Heading</h3>
-  <h4>Heading</h4>
-  <h5>Heading</h5> 
-  <h6>Heading</h6>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <button>Button</button>
-  <a>Link Tag</a>
-  <a>Link Tag w/class</a>
-  <ul>
-    <li>List Item</li>
-    <li>List Item</li>
-    <li>List Item</li>
-    <li>List Item</li>
-    <li>List Item</li>
-  </ul>
+  <section>
+    <div class="container">
+      <h1>Heading</h1> 
+      <h2>Heading</h2> 
+      <h3>Heading</h3>
+      <h4>Heading</h4>
+      <h5>Heading</h5> 
+      <h6>Heading</h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <button>Button</button>
+      <a href="index.html">Link Tag</a>
+      <ol>
+       <li>List Item</li>
+       <li>List Item</li>
+       <li>List Item</li>
+       <li>List Item</li>
+       <li>List Item</li>
+      </ol>
+      <img src="./assets/Img-1.png"/>
+   </div>
+  </section>
+  <section>
+    <div class="container" >
+      <div class="grid">
+        <div class="yellow-box"></div>
+        <div class="green-box"></div>
+      </div>
+    </div>
+    <div class="container" >
+      <div class="grid-reverse">
+        <div class="green-box"></div>
+        <div class="yellow-box"></div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
