--- a/stylesheet.html
+++ b/stylesheet.html
@@ -46,5 +46,28 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="container blog-grid">
+      <div class="blogcard-text-wrapper">
+        <div>
+          <h4>Tech</h4>
+          <h3>Position's CSS</h3>
+        </div>
+        <div class="blog-author">
+          <div>
+            <p class="subtitle">Date Published</p>
+            <p>Jan 19th</p>
+          </div>
+          <div>
+            <p class="subtitle">Author</p>
+            <p>Milo Palmer</p>
+          </div>
+        </div>
+        
+      </div>
+      <p class="blog-text-p1">Element can sometimes act in very unamusing ways and can seem to not do what you want them to but with a bit of mastery in the position style we can turn into a true frontend hacker and gain incredible control over our web pages and where we position our content. </p>
+      <div class="yellow-box"></div>
+    </div>
+  </section>
 </body>
 </html>
