add photo to blog 2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img src="./assets/img-3.png" alt="pic of css position styles">
     </div>
     <div class="container grid-reverse border">
-      <div></div>
+      <img src="./assets/img-6.webp" alt="Landscape of mountains">
       <div class="blogcard-text-wrapper">
         <div>
           <h4>blog post</h4>
