--- a/blog-tech-2.html
+++ b/blog-tech-2.html
@@ -54,7 +54,7 @@
       <div class="yellow-box"></div>
       <div class="green-box"></div>
       <h6>Position Relative</h6>
-      <p>Position relative gets a bit more exiting having positon relative lets and object have a z-index, lets us stack elements ontop of one another. It can also be affected by the top, bottom, left and right properties. These properties are by defauklt set ot 0 but take a numerical value such as top: 100px which would place the element 100px away from the top in this case with a positive value it will move downwards on the page with a negative value it will move above where it was. Most importantly when a parent object has a position set to relative a child element can be positioned anywhere on the DOM without limitations and without affecting the position of other elements.  
+      <p>Position relative gets a bit more exiting having positon relative lets and object have a z-index, lets us stack elements ontop of one another. It can also be affected by the top, bottom, left and right properties. These properties are by default set to zero but take a numerical value such as top: 100px which would place the element 100px away from the top in this case with a positive value it will move downwards on the page with a negative value it will move above where it was. Most importantly when a parent object has a position set to relative a child element can be positioned anywhere on the DOM without limitations and without affecting the position of other elements.  
       </p>
       <p>yellow - static</p>
       <div class="yellow-box"></div>
