change fixed box tech blog

--- a/blog-tech-2.html
+++ b/blog-tech-2.html
@@ -71,7 +71,7 @@
       <h6>Postion Fixed</h6>
       <p>Positon fixed works in a similar way to position absolute but is set relative to the document body always. If you hadn't noticed it is the little yellow box on the bottom left of the screen. This element is fixed to this position using the top, bottom, left and right properties and will remain in this position as we scroll thorugh the page. Position fixed is often used for navigation menus so as the user scrolls the nav menu remains in view and can always be interated with.
       </p>
-      <div class="yellow-box-fixed"></div>
+      <div class="yellow-box-fixed">Fixed</div>
     </div>
   </section>
   <footer>
