fix tech blog text-wrap

--- a/blog-tech-2.html
+++ b/blog-tech-2.html
@@ -27,7 +27,7 @@
           <h3>Position's CSS</h3>
         </div>
         <div class="blog-author">
-          <div>
+          <div class="margin-right">
             <p class="subtitle">Date Published</p>
             <p>Jan 19th</p>
           </div>
