--- a/stylesheet.html
+++ b/stylesheet.html
@@ -69,5 +69,32 @@
       <div class="yellow-box"></div>
     </div>
   </section>
+  <section>
+    <div class="container">
+      <div class="blog-tile-wrapper">
+        <div class="blog-tile">
+          <a href="blog-tech-2.html" ><img src="./assets/img-6.webp" alt=""></a>
+          <a href="blog-tech-2.html" ><h6>Lorem ipsum dolor sit amet.</h6></a>
+          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+        </div>
+        <div class="blog-tile">
+          <a href="blog-tech-2.html" ><img src="./assets/Img-1.png" alt=""></a>
+          <a href="blog-tech-2.html" ><h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6></a>
+          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+        </div>
+        <div class="blog-tile">
+          <a href="blog-tech-2.html" ><img src="./assets/img-4.png" alt=""></a>
+          <a href="blog-tech-2.html" ><h6>Lorem ipsum dolor sit.</h6></a>
+          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+        </div>
+        <div class="blog-tile">
+          <a href="blog-tech-2.html" ><img src="./assets/img-5.png" alt=""></a>
+          <a href="blog-tech-2.html" ><h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h6></a>
+          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
 </body>
 </html>
