add new blog post

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
       <img src="./assets/img-6.webp" alt="Landscape of mountains">
       <div class="blogcard-text-wrapper">
         <div>
-          <h4>blog post</h4>
-          <h3>Sprint-Two Core Blog</h3>
+          <h4>Core</h4>
+          <h3>Sprint Two - Learning Plan</h3>
         </div>
         <div>
-          <a href="">
-          <p>Lorem Ipsom Some Text here first blogs sentence...</p>
-          <h5>Coming soon</h5>
+          <a href="blog-core-2.html">
+          <p>This plan is a core part of your learning and will develop...</p>
+          <h5>Read more</h5>
         </a>
         </div>
       </div>
