--- a/blog-core-1.html
+++ b/blog-core-1.html
@@ -58,6 +58,28 @@
       <p>Often when in a team and there is a deadline or a grade and there is a person slacking or not contributing there part of the task I find myself jumping in and taking over and even if this results in a finished product or a better grade it isn't the right course of action. When this happens in the future I’m gonna ask the person what I can do to assist them or try and suit their needs over mine at the end of the day we are all here to learn and I can’t be taking that away from anyone. </p>
     </div>
   </section>
+  <section>
+    <div class="container">
+      <div class="blog-tile-wrapper">
+        <div class="blog-tile">
+          <a href="blog-core-2.html" ><img src="./assets/img-7.jpeg" alt=""></a>
+          <a href="blog-core-2.html" ><h6>Sprint Two - Learning Plan</h6></a>
+          <a href="blog-core-2.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+        </div>
+        <div class="blog-tile">
+          <a href="blog-tech-2.html" ><img src="./assets/img-3.png" alt=""></a>
+          <a href="blog-tech-2.html" ><h6>CSS Positions</h6></a>
+          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+        </div>
+        <div class="blog-tile">
+          <a href="" ><img src="./assets/Img-1.png" alt=""></a>
+          <a href="" ><h6>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h6></a>
+          <a href=""  class="snap-to-bottom"><h5>Coming soon</h5></a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
   <footer>
     <nav>
       <div>
