--- a/blog-tech-2.html
+++ b/blog-tech-2.html
@@ -74,6 +74,28 @@
       <div class="yellow-box-fixed">Fixed</div>
     </div>
   </section>
+  <section>
+    <div class="container">
+      <div class="blog-tile-wrapper">
+        <div class="blog-tile">
+          <a href="blog-core-1.html" ><img src="./assets/img-5.png" alt=""></a>
+          <a href="blog-core-1.html" ><h6>Explore Values and Identity</h6></a>
+          <a href="blog-core-1.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+        </div>
+        <div class="blog-tile">
+          <a href="blog-core-2.html" ><img src="./assets/img-7.jpeg" alt=""></a>
+          <a href="blog-core-2.html" ><h6>Sprint Two - Learning Plan</h6></a>
+          <a href="blog-core-2.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+        </div>
+        <div class="blog-tile">
+          <a href="" ><img src="./assets/Img-1.png" alt=""></a>
+          <a href="" ><h6>Lorem ipsum dolor sit amet consectetur.</h6></a>
+          <a href=""  class="snap-to-bottom"><h5>Coming soon</h5></a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
   <footer>
     <nav>
       <div>
