fix typos in blogs

--- a/blog-tech-2.html
+++ b/blog-tech-2.html
@@ -46,7 +46,7 @@
   </div>
   <section>
     <div class="container">
-      <h6>Postion Static</h6>
+      <h6>Position Static</h6>
       <p>Position static is the default position, one doesn’t even need to add this to your css, 
         Static positions are not affected by the top, bottom, left and right properties.
         Static position is fairly basic, static elements position them selves next to or underneath depending if they are text - inline or div blocks. 
@@ -54,22 +54,22 @@
       <div class="yellow-box"></div>
       <div class="green-box"></div>
       <h6>Position Relative</h6>
-      <p>Position relative gets a bit more exiting having positon relative lets and object have a z-index, lets us stack elements ontop of one another. It can also be affected by the top, bottom, left and right properties. These properties are by default set to zero but take a numerical value such as top: 100px which would place the element 100px away from the top in this case with a positive value it will move downwards on the page with a negative value it will move above where it was. Most importantly when a parent object has a position set to relative a child element can be positioned anywhere on the DOM without limitations and without affecting the position of other elements.  
+      <p>Position relative gets a bit more exiting having positon relative lets an object have a z-index, lets us stack elements ontop of one another. It can also be affected by the top, bottom, left and right properties. These properties are by default set to zero but take a numerical value such as top: 100px which would place the element 100px away from the top in this case with a positive value it will move downwards on the page with a negative value it will move above where it was. Most importantly when a parent object has a position set to relative a child element can be positioned anywhere on the DOM without limitations and without affecting the position of other elements.  
       </p>
       <p>yellow - static</p>
       <div class="yellow-box"></div>
       <p>green - relative</p>
       <div class="green-box-relative"></div>
       <h6>Postion Absolute</h6>
-      <p>Position absolute will initially position a element relative to the document’s body element position element is manipulate using the top, bottom, left and right properties. When it has a parent element set to relative the child with absolute will be positioned you guessed it relative to its parent making the top, bottom, left and right properties based of the parent. If its parent element doesn’t have a positon et to relative it will find the next closet element other wise it will use the body
+      <p>Position absolute will initially position a element relative to the document’s body element position element is manipulated using the top, bottom, left and right properties. When it has a parent element set to relative the child with absolute will be positioned you guessed it relative to its parent making the top, bottom, left and right properties based of the parent. If its parent element doesn’t have a positon set to relative it will find the next closet element other wise it will use the body
       </p>
       <p>yellow- parent - relative</p>
       <div class="yellow-box-relative">
         <div class="green-box-absolute"></div>
       </div>
       <p>green - absolute</p>
-      <h6>Postion Fixed</h6>
-      <p>Positon fixed works in a similar way to position absolute but is set relative to the document body always. If you hadn't noticed it is the little yellow box on the bottom left of the screen. This element is fixed to this position using the top, bottom, left and right properties and will remain in this position as we scroll thorugh the page. Position fixed is often used for navigation menus so as the user scrolls the nav menu remains in view and can always be interated with.
+      <h6>Position Fixed</h6>
+      <p>Position fixed works in a similar way to position absolute but is set relative to the document body always. If you hadn't noticed it is the little yellow box on the bottom left of the screen. This element is fixed to this position using the top, bottom, left and right properties and will remain in this position as we scroll thorugh the page. Position fixed is often used for navigation menus so as the user scrolls the nav menu remains in view and can always be interated with.
       </p>
       <div class="yellow-box-fixed">Fixed</div>
     </div>
