--- a/html-css.html
+++ b/html-css.html
@@ -78,14 +78,14 @@
     <div class="container">
       <div class="blog-tile-wrapper">
         <div class="blog-tile">
-          <a href="blog-core-1.html" ><img src="./assets/img-5.png" alt=""></a>
-          <a href="blog-core-1.html" ><h6>Explore Values and Identity</h6></a>
-          <a href="blog-core-1.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+          <a href="identity-values.html" ><img src="./assets/img-5.png" alt=""></a>
+          <a href="identity-values.html" ><h6>Explore Values and Identity</h6></a>
+          <a href="identity-values.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="blog-core-2.html" ><img src="./assets/img-7.jpeg" alt=""></a>
-          <a href="blog-core-2.html" ><h6>Sprint Two - Learning Plan</h6></a>
-          <a href="blog-core-2.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+          <a href="learning-plan.html" ><img src="./assets/img-7.jpeg" alt=""></a>
+          <a href="learning-plan.html" ><h6>Sprint Two - Learning Plan</h6></a>
+          <a href="learning-plan.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
           <a href="" ><img src="./assets/Img-1.png" alt=""></a>
