--- a/identity-values.html
+++ b/identity-values.html
@@ -62,14 +62,14 @@
     <div class="container">
       <div class="blog-tile-wrapper">
         <div class="blog-tile">
-          <a href="blog-core-2.html" ><img src="./assets/img-7.jpeg" alt=""></a>
-          <a href="blog-core-2.html" ><h6>Sprint Two - Learning Plan</h6></a>
-          <a href="blog-core-2.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+          <a href="learning-plan.html" ><img src="./assets/img-7.jpeg" alt=""></a>
+          <a href="learning-plan.html" ><h6>Sprint Two - Learning Plan</h6></a>
+          <a href="learning-plan.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="blog-tech-2.html" ><img src="./assets/img-3.png" alt=""></a>
-          <a href="blog-tech-2.html" ><h6>CSS Positions</h6></a>
-          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+          <a href="html-css.html" ><img src="./assets/img-3.png" alt=""></a>
+          <a href="html-css.html" ><h6>CSS Positions</h6></a>
+          <a href="html-css.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
           <a href="" ><img src="./assets/Img-1.png" alt=""></a>
