--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h3>CSS Positions</h3>
         </div>
         <div>
-          <a href="blog-tech-2.html">
+          <a href="html-css.html">
           <p>Element can sometimes act in very unamusing ways and can seem...</p>
           <h5>Read more</h5>
         </a>
@@ -72,7 +72,7 @@
           <h3>Sprint Two - Learning Plan</h3>
         </div>
         <div>
-          <a href="blog-core-2.html">
+          <a href="learning-plan.html">
           <p>This plan is a core part of your learning and will develop...</p>
           <h5>Read more</h5>
         </a>
@@ -86,7 +86,7 @@
           <h3>Explore Values and Identity</h3>
         </div>
         <div>
-          <a href="blog-core-1.html">
+          <a href="identity-values.html">
           <p>The aim of this blog is to reflect on your core personal values...</p>
           <h5>Read more</h5>
         </a>
@@ -99,24 +99,24 @@
     <div class="container">
       <div class="blog-tile-wrapper">
         <div class="blog-tile">
-          <a href="blog-tech-2.html" ><img src="./assets/img-6.webp" alt=""></a>
-          <a href="blog-tech-2.html" ><h6>Lorem ipsum dolor sit amet.</h6></a>
-          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="html-css.html" ><img src="./assets/img-6.webp" alt=""></a>
+          <a href="html-css.html" ><h6>Lorem ipsum dolor sit amet.</h6></a>
+          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="blog-tech-2.html" ><img src="./assets/Img-1.png" alt=""></a>
-          <a href="blog-tech-2.html" ><h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6></a>
-          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="html-css.html" ><img src="./assets/Img-1.png" alt=""></a>
+          <a href="html-css.html" ><h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6></a>
+          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="blog-tech-2.html" ><img src="./assets/img-4.png" alt=""></a>
-          <a href="blog-tech-2.html" ><h6>Lorem ipsum dolor sit.</h6></a>
-          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="html-css.html" ><img src="./assets/img-4.png" alt=""></a>
+          <a href="html-css.html" ><h6>Lorem ipsum dolor sit.</h6></a>
+          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="blog-tech-2.html" ><img src="./assets/img-5.png" alt=""></a>
-          <a href="blog-tech-2.html" ><h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h6></a>
-          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="html-css.html" ><img src="./assets/img-5.png" alt=""></a>
+          <a href="html-css.html" ><h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h6></a>
+          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
         </div>
       </div>
     </div>
