--- a/learning-plan.html
+++ b/learning-plan.html
@@ -70,9 +70,9 @@
           <a href="blog-core-1.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="blog-tech-2.html" ><img src="./assets/img-3.png" alt=""></a>
-          <a href="blog-tech-2.html" ><h6>CSS Positions</h6></a>
-          <a href="blog-tech-2.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+          <a href="html-css.html" ><img src="./assets/img-3.png" alt=""></a>
+          <a href="html-css.html" ><h6>CSS Positions</h6></a>
+          <a href="html-css.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
           <a href="" ><img src="./assets/Img-1.png" alt=""></a>
