--- a/learning-plan.html
+++ b/learning-plan.html
@@ -65,9 +65,9 @@
     <div class="container">
       <div class="blog-tile-wrapper">
         <div class="blog-tile">
-          <a href="blog-core-1.html" ><img src="./assets/img-5.png" alt=""></a>
-          <a href="blog-core-1.html" ><h6>Explore Values and Identity</h6></a>
-          <a href="blog-core-1.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+          <a href="identity-values.html" ><img src="./assets/img-5.png" alt=""></a>
+          <a href="identity-values.html" ><h6>Explore Values and Identity</h6></a>
+          <a href="identity-values.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
           <a href="html-css.html" ><img src="./assets/img-3.png" alt=""></a>
