--- a/html-css.html
+++ b/html-css.html
@@ -88,9 +88,9 @@
           <a href="learning-plan.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="" ><img src="./assets/Img-1.png" alt=""></a>
-          <a href="" ><h6>Lorem ipsum dolor sit amet consectetur.</h6></a>
-          <a href=""  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="emotional-intelligence.html" ><img src="./assets/emotional.jpeg" alt=""></a>
+          <a href="emotional-intelligence.html" ><h6>Emotional Intelligence EQ vs IQ</h6></a>
+          <a href="emotional-intelligence.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
       </div>
     </div>
