--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     <div class="container">
       <div class="blog-tile-wrapper">
         <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/img-6.webp" alt=""></a>
-          <a href="html-css.html" ><h6>Lorem ipsum dolor sit amet.</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="emotional-intelligence.html" ><img src="./assets/emotional.jpeg" alt=""></a>
+          <a href="emotional-intelligence.html" ><h6>Emotional Intelligence EQ vs IQ</h6></a>
+          <a href="emotional-intelligence.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
           <a href="html-css.html" ><img src="./assets/Img-1.png" alt=""></a>
