--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -53,7 +53,7 @@
       <p>Just like IQ, EQ is a score from a test but from a emotional test, where an IQ would test logic an EQ test will measure your ability to recognize emotion in yourself and in others and be able to use that information to guide your decisions. It is a level of understanding of how you react to emotions and being aware and in control in a positive manner. </p>
       <p>A scene from the TV show young sheldon covers the differences Sheldon is known to have a incredibly high IQ and his sister not so much although running a different type of test shows his sisters strengths. <a class="para-link" href="https://youtu.be/tjKUss2beJQ?t=45" target="_blank">Check it out.</a></p>
       <h6>Why is EQ important?</h6>
-      <p>A high EQ allows you to build relationships, defuse conflict, decrease the stress levels of a team and boost morale and improve job satisfaction. EQ is a leading factor in many successful peoples lives almost more important that IQ. Having both a high IQ and EQ would lead to a very competent life and a good career. </p>
+      <p>A high EQ allows you to build relationships, defuse conflict, decrease the stress levels of a team and boost morale and improve job satisfaction. EQ is a leading factor in many successful peoples lives almost more important than that of IQ. Having both a high IQ and EQ would lead to a very competent life and a good career. </p>
     </div>
   </section>
   <section>
