--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -70,9 +70,9 @@
           <a href="identity-values.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/img-3.png" alt=""></a>
-          <a href="html-css.html" ><h6>CSS Positions</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+          <a href="javascript-dom.html" ><img src="./assets/js-funda.jpeg" alt=""></a>
+          <a href="javascript-dom.html" ><h6>JavaScript and the DOM</h6></a>
+          <a href="javascript-dom.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
       </div>
     </div>
