--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
           <a href="emotional-intelligence.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/Img-1.png" alt=""></a>
-          <a href="html-css.html" ><h6>Lorem ipsum, dolor sit amet consectetur adipisicing.</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="javascript-dom.html" ><img src="./assets/js-funda.jpeg" alt=""></a>
+          <a href="javascript-dom.html" ><h6>JavaScript and the DOM</h6></a>
+          <a href="javascript-dom.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
           <a href="html-css.html" ><img src="./assets/img-4.png" alt=""></a>
