--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
           <a href="javascript-dom.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/img-4.png" alt=""></a>
-          <a href="html-css.html" ><h6>Lorem ipsum dolor sit.</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="neuroplasticity.html" ><img src="./assets/growth-mindset.jpeg" alt=""></a>
+          <a href="neuroplasticity.html" ><h6>Understanding Neuroplasticity and the Growth Mindset.</h6></a>
+          <a href="neuroplasticity.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
           <a href="html-css.html" ><img src="./assets/img-5.png" alt=""></a>
