--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
         </div>
         <div class="blog-tile">
           <a href="neuroplasticity.html" ><img src="./assets/growth-mindset.jpeg" alt=""></a>
-          <a href="neuroplasticity.html" ><h6>Understanding Neuroplasticity and the Growth Mindset.</h6></a>
+          <a href="neuroplasticity.html" ><h6>Understanding Neuroplasticity and the Growth Mindset</h6></a>
           <a href="neuroplasticity.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/img-5.png" alt=""></a>
-          <a href="html-css.html" ><h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Coming soon</h5></a>
+          <a href="problem-solving.html" ><img src="./assets/probelmsolving-blogcard.jpeg" alt=""></a>
+          <a href="problem-solving.html" ><h6>Problem Solving</h6></a>
+          <a href="problem-solving.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
       </div>
     </div>
