--- a/javascript-dom.html
+++ b/javascript-dom.html
@@ -122,6 +122,6 @@
       <p>2023 - No Rights Reserved</p>
     </div>
   </footer>
-  <script src="index.js"></script>
+  <script src="button.js"></script>
 </body>
 </html>
