Add auto blog layout w/ random article recommendation

--- a/html-css.html
+++ b/html-css.html
@@ -76,22 +76,7 @@
   </section>
   <section>
     <div class="container">
-      <div class="blog-tile-wrapper">
-        <div class="blog-tile">
-          <a href="identity-values.html" ><img src="./assets/img-5.png" alt=""></a>
-          <a href="identity-values.html" ><h6>Explore Values and Identity</h6></a>
-          <a href="identity-values.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="learning-plan.html" ><img src="./assets/img-7.jpeg" alt=""></a>
-          <a href="learning-plan.html" ><h6>Sprint Two - Learning Plan</h6></a>
-          <a href="learning-plan.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="emotional-intelligence.html" ><img src="./assets/emotional.jpeg" alt=""></a>
-          <a href="emotional-intelligence.html" ><h6>Emotional Intelligence EQ vs IQ</h6></a>
-          <a href="emotional-intelligence.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
+      <div class="blog-tile-wrapper" id="article-blog">
       </div>
     </div>
     </div>
@@ -104,5 +89,6 @@
       <h1>Blog.</h1>
     </nav>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
