--- a/identity-values.html
+++ b/identity-values.html
@@ -60,22 +60,7 @@
   </section>
   <section>
     <div class="container">
-      <div class="blog-tile-wrapper">
-        <div class="blog-tile">
-          <a href="learning-plan.html" ><img src="./assets/img-7.jpeg" alt=""></a>
-          <a href="learning-plan.html" ><h6>Sprint Two - Learning Plan</h6></a>
-          <a href="learning-plan.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/img-3.png" alt=""></a>
-          <a href="html-css.html" ><h6>CSS Positions</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="emotional-intelligence.html" ><img src="./assets/emotional.jpeg" alt=""></a>
-          <a href="emotional-intelligence.html" ><h6>Emotional Intelligence EQ vs IQ</h6></a>
-          <a href="emotional-intelligence.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
+      <div class="blog-tile-wrapper"  id="article-blog">
       </div>
     </div>
     </div>
@@ -91,5 +76,6 @@
       <p>2023 - No Rights Reserved</p>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
