--- a/index.html
+++ b/index.html
@@ -49,75 +49,10 @@
     </div>
   </section>
   <section id="blog-posts">
-    <div class="container grid border">
-      <div class="blogcard-text-wrapper">
-        <div>
-          <h4>tech</h4>
-          <h3>CSS Positions</h3>
-        </div>
-        <div>
-          <a href="html-css.html">
-          <p>Element can sometimes act in very unamusing ways and can seem...</p>
-          <h5>Read more</h5>
-        </a>
-        </div>
-      </div>
-        <img src="./assets/img-3.png" alt="pic of css position styles">
-    </div>
-    <div class="container grid-reverse border">
-      <img src="./assets/img-6.webp" alt="Landscape of mountains">
-      <div class="blogcard-text-wrapper">
-        <div>
-          <h4>Core</h4>
-          <h3>Sprint Two - Learning Plan</h3>
-        </div>
-        <div>
-          <a href="learning-plan.html">
-          <p>This plan is a core part of your learning and will develop...</p>
-          <h5>Read more</h5>
-        </a>
-        </div>
-      </div>
-    </div>
-    <div class="container grid">
-      <div class="blogcard-text-wrapper">
-        <div>
-          <h4>core</h4>
-          <h3>Explore Values and Identity</h3>
-        </div>
-        <div>
-          <a href="identity-values.html">
-          <p>The aim of this blog is to reflect on your core personal values...</p>
-          <h5>Read more</h5>
-        </a>
-        </div>
-      </div>
-      <img src="./assets/img-5.png" alt="abstract paisnting of a face">
-    </div>
   </section>
   <section>
     <div class="container">
-      <div class="blog-tile-wrapper">
-        <div class="blog-tile">
-          <a href="emotional-intelligence.html" ><img src="./assets/emotional.jpeg" alt=""></a>
-          <a href="emotional-intelligence.html" ><h6>Emotional Intelligence EQ vs IQ</h6></a>
-          <a href="emotional-intelligence.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="javascript-dom.html" ><img src="./assets/js-funda.jpeg" alt=""></a>
-          <a href="javascript-dom.html" ><h6>JavaScript and the DOM</h6></a>
-          <a href="javascript-dom.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="neuroplasticity.html" ><img src="./assets/growth-mindset.jpeg" alt=""></a>
-          <a href="neuroplasticity.html" ><h6>Understanding Neuroplasticity and the Growth Mindset</h6></a>
-          <a href="neuroplasticity.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="problem-solving.html" ><img src="./assets/probelmsolving-blogcard.jpeg" alt=""></a>
-          <a href="problem-solving.html" ><h6>Problem Solving</h6></a>
-          <a href="problem-solving.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
+      <div class="blog-tile-wrapper" id="blog-cards" >
       </div>
     </div>
     </div>
@@ -135,5 +70,6 @@
       <p>2023 - No Rights Reserved</p>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
