--- a/learning-plan.html
+++ b/learning-plan.html
@@ -63,22 +63,7 @@
   </section>
   <section>
     <div class="container">
-      <div class="blog-tile-wrapper">
-        <div class="blog-tile">
-          <a href="identity-values.html" ><img src="./assets/img-5.png" alt=""></a>
-          <a href="identity-values.html" ><h6>Explore Values and Identity</h6></a>
-          <a href="identity-values.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/img-3.png" alt=""></a>
-          <a href="html-css.html" ><h6>CSS Positions</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="emotional-intelligence.html" ><img src="./assets/emotional.jpeg" alt=""></a>
-          <a href="emotional-intelligence.html" ><h6>Emotional Intelligence EQ vs IQ</h6></a>
-          <a href="emotional-intelligence.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
+      <div class="blog-tile-wrapper"  id="article-blog">
       </div>
     </div>
     </div>
@@ -94,5 +79,6 @@
       <p>2023 - No Rights Reserved</p>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
