--- a/neuroplasticity.html
+++ b/neuroplasticity.html
@@ -63,22 +63,7 @@
   </section>
   <section>
     <div class="container">
-      <div class="blog-tile-wrapper">
-        <div class="blog-tile">
-          <a href="learning-plan.html" ><img src="./assets/img-7.jpeg" alt=""></a>
-          <a href="learning-plan.html" ><h6>Sprint Two - Learning Plan</h6></a>
-          <a href="learning-plan.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="identity-values.html" ><img src="./assets/img-5.png" alt=""></a>
-          <a href="identity-values.html" ><h6>Explore Values and Identity</h6></a>
-          <a href="identity-values.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="javascript-dom.html" ><img src="./assets/js-funda.jpeg" alt=""></a>
-          <a href="javascript-dom.html" ><h6>JavaScript and the DOM</h6></a>
-          <a href="javascript-dom.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
+      <div class="blog-tile-wrapper"  id="article-blog">
       </div>
     </div>
     </div>
@@ -94,5 +79,6 @@
       <p>2023 - No Rights Reserved</p>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
