--- a/problem-solving.html
+++ b/problem-solving.html
@@ -88,22 +88,7 @@
   </section>
   <section>
     <div class="container">
-      <div class="blog-tile-wrapper">
-        <div class="blog-tile">
-          <a href="html-css.html" ><img src="./assets/img-3.png" alt=""></a>
-          <a href="html-css.html" ><h6>CSS Positions</h6></a>
-          <a href="html-css.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="javascript-dom.html" ><img src="./assets/js-funda.jpeg" alt=""></a>
-          <a href="javascript-dom.html" ><h6>JavaScript and the DOM</h6></a>
-          <a href="javascript-dom.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
-        <div class="blog-tile">
-          <a href="neuroplasticity.html" ><img src="./assets/growth-mindset.jpeg" alt=""></a>
-          <a href="neuroplasticity.html" ><h6>Understanding Neuroplasticity and the Growth Mindset</h6></a>
-          <a href="neuroplasticity.html"  class="snap-to-bottom"><h5>Read more</h5></a>
-        </div>
+      <div class="blog-tile-wrapper"  id="article-blog">
       </div>
     </div>
     </div>
@@ -119,5 +104,6 @@
       <p>2023 - No Rights Reserved</p>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
