--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Milo Dev Blog</title>
+  <title>Milo's Portfolio</title>
   <link rel="stylesheet" href="./styles/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,10 +13,11 @@
 <body>
   <header class="yellow">
     <nav>
-      <h1>Blog.</h1>
+      <h1>Milo.</h1>
       <div>
         <a href="index.html"><button>Home</button></a>
         <a href="#blog-posts"><button>Blog Posts</button></a>
+        <a href="#projects"><button>Projects</button></a>
         <a href="#goals"><button>Goals</button></a>
       </div>
     </nav>
@@ -25,24 +26,52 @@
     <div class="container grid">
       <div class="hero-text-wrapper">
         <h2>Kia ora <br> e te ao! Hello World!</h2> 
-        <p> This is the beginning of my website home page. It will eventually contain a list of links to all my blogs. </p>
+        <p>Hi I'm Milo, a passionate junior developer eager to explore the endless possibilities of coding. I believe that continuous learning is crucial in this ever-evolving field, and there is so much to learn so I'll never get bored
+        </p>
       </div>
       <img src="./assets/Img-1.png"/>
   </div>
+  </section>
+  <section id="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="blog-tile-wrapper" >
+        <div class="blog-tile" >
+          <a href="sims.html" ><img src="./assets/Sims.png" alt="Sims drawing page user drawing a scarecrow"></a>
+          <a href="sims.html" ><h6>Sims Scribble 98</h6></a>
+          <a href="sims.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+        </div>
+        <div class="blog-tile" >
+          <a href="gpt.html" ><img src="./assets/CHATGPT.png" alt="User playing chatGPT game picking where to take the adventure"></a>
+          <a href="gpt.html" ><h6>ChatGPT Chose Your Adventure</h6></a>
+          <a href="gpt.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+        </div>
+        <div class="blog-tile" >
+          <a href="sn3kers.html" ><img src="./assets/Sn3kersHome.png" alt="3d Sneaker websote home page"></a>
+          <a href="sn3kers.html" ><h6>Sn3kers Shop</h6></a>
+          <a href="sn3kers.html"  class="snap-to-bottom"><h5>Read more</h5></a>
+        </div>
+        <div class="blog-tile" >
+          <a href="" ><img src="./assets/Kiwi-sleeping (1).avif" alt="Bird Spotter App"></a>
+          <a href="" ><h6>Bird Spotter App</h6></a>
+          <a href=""  class="snap-to-bottom"><h5>Coming Soon...</h5></a>
+        </div>
+      </div>
+    </div>
+    </div>
   </section>
   <section id="goals" class="black">
     <div class="container">
       <div>
       <h2>Goals</h2>
-      <p>Things I want to accomplish during this course and a little after</p>
+      <p>Things I want to accomplish</p>
       </div>
       <div class="grid">
         <div></div>
         <ol>
-          <li>Keep Practising <span class="gold">HTML</span></li>
-          <li>Improve <span class="gold">CSS</span></li>
-          <li>Learn <span class="gold">JavaScript</span></li>
-          <li>Learn <span class="gold">React</span></li>
+          <li>Continue Learning <span class="gold">Next13</span></li>
+          <li>Look into <span class="gold">AWS</span></li>
+          <li>Look into <span class="gold">.NET</span></li>
           <li>Explore <span class="gold">THREE.JS</span> (JavaScript 3D design library)</li>
         </ol>
         </div>
@@ -62,6 +91,7 @@
       <div>
         <a href="index.html"><button>Home</button></a>
         <a href="#blog-posts"><button class="nav-btn">Blog Posts</button></a>
+        <a href="#projects"><button>Projects</button></a>
         <a href="#goals"><button>Goals</button></a>
       </div>
       <h1>Blog.</h1>
