--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <a href="sn3kers.html"  class="snap-to-bottom"><h5>Read more</h5></a>
         </div>
         <div class="blog-tile" >
-          <a href="" ><img src="./assets/Kiwi-sleeping (1).avif" alt="Bird Spotter App"></a>
-          <a href="" ><h6>Bird Spotter App</h6></a>
-          <a href=""  class="snap-to-bottom"><h5>Coming Soon...</h5></a>
+          <a href="#projects" ><img src="./assets/Kiwi-sleeping (1).avif" alt="Bird Spotter App"></a>
+          <a href="#projects" ><h6>Bird Spotter App</h6></a>
+          <a href="#projects"  class="snap-to-bottom"><h5>Coming Soon...</h5></a>
         </div>
       </div>
     </div>
