--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a href="#projects"><button>Projects</button></a>
         <a href="#goals"><button>Goals</button></a>
       </div>
-      <h1>Blog.</h1>
+      <h1>Milo.</h1>
     </nav>
     <div class="center">
       <p>2023 - No Rights Reserved</p>
